--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 HELP.md
-.gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-###
+### CUSTOM ###
 /src/main/resources/application.properties
+.run
 
 ### STS ###
 .apt_generated
