--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+.gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
@@ -6,6 +7,8 @@ build/
 
 ### CUSTOM ###
 .run
+!build.gradle
+build
 
 ### STS ###
 .apt_generated
